@@ -1,3 +1,7 @@
+2007-08-12  Stephen Deasey  <sdeasey@users.sf.net>
+
+	* nsd/tclinit.c: Remove the async cancel stuff. See module: nsloopctl.
+
 2007-08-11  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* include/ns.h:
